# shulker-preview

./: .gitignore  README.md  script.py
1.14/: script.py
1.21/: beet.json  beet.yaml  plugin.py  pyproject.toml  script.py
1.21/datapack/: pack.mcmeta
1.21/datapack/data/tryashtar.shulker_preview/advancement/: detect_shulker_box.json
1.21/datapack/data/tryashtar.shulker_preview/advancements/: detect_ender_chest.json
1.21/datapack/data/tryashtar.shulker_preview/function/: analyze.mcfunction  process.mcfunction
1.21/datapack/data/tryashtar.shulker_preview/function/config/: set.mcfunction  show_settings.mcfunction
1.21/datapack/data/tryashtar.shulker_preview/function/ender_chest/: detect.mcfunction  to_enderchest.mcfunction
1.21/datapack/data/tryashtar.shulker_preview/function/meta/: initialize_data.mcfunction  install.mcfunction  load.mcfunction  player_online.mcfunction
1.21/datapack/data/tryashtar.shulker_preview/function/render/: banner_color.mcfunction  convert_color.mcfunction  potion_color_loop.mcfunction  star_color_loop.mcfunction
1.21/datapack/data/tryashtar.shulker_preview/functions/: process.mcfunction
1.21/datapack/data/tryashtar.shulker_preview/item_modifier/: finish.json  modded_broken.json
1.21/datapack/data/tryashtar.shulker_preview/item_modifiers/: ender_chest_copy.json
1.21/in/resourcepack/: pack.mcmeta
1.21/resourcepack/: pack.mcmeta
1.21/resourcepack/assets/tryashtar.shulker_preview/font/: preview.json
1.21/resourcepack/assets/tryashtar.shulker_preview/lang/: en_us.json
1.21/resourcepack_dark/: pack.mcmeta
(+1860 files in other folders)
