[project]
name = "shulker-preview"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "beet[image]>=0.111.0",
    "mecha>=0.98.1",
    "model-resolver",
    "pyopengl",
]

[tool.uv.sources]
pyopengl = { git = "https://github.com/tryashtar/pyopengl" }
model-resolver = { git = "https://github.com/tryashtar/model_resolver" }
